fix content from jumping around

--- a/src/components/projectCard.scss
+++ b/src/components/projectCard.scss
@@ -144,7 +144,7 @@ $metalic_white: #d9d9d9;
   &:hover {
     .image {
       filter: grayscale(0);
-      width: 150%;
+      //width: 150%;
     }
     .tags {
       filter: grayscale(0);
